# acados_solver_ros2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  acados_controllers_ros2.repos  acados_solver_ros2.repos  genindex.html  index.html  objects.inv  search.html  searchindex.js
.docker/: README.md
_modules/: index.html
acados_controllers_ros2/: CMakeLists.txt  README.md  package.xml  requirements.txt
acados_controllers_ros2/doxygen/: Doxyfile
acados_controllers_ros2/sphinx/: conf.py  index.rst
acados_controllers_ros2/sphinx/developer_guide/: API.rst
acados_controllers_ros2/sphinx/quickstart/: installation.rst
acados_controllers_ros2/sphinx/user_guide/: todo.rst
acados_solver_base/: CMakeLists.txt  CONTRIBUTING.md  package.xml
acados_solver_base/include/acados_solver_base/: acados_solver.hpp  acados_solver_dimensions.hpp  acados_solver_exceptions.hpp  acados_solver_utils.hpp  acados_types.hpp  visibility_control.h
acados_solver_base/src/: acados_solver.cpp  acados_solver_utils.cpp
acados_solver_base/test/: test_solver.cpp  test_static_functions.cpp
acados_solver_base/test/mock_acados_solver/: acados_ocp_mock_acados_solver.json  add_pluging_to_build.cmake  export_plugin.xml  mock_acados_solver.cpp  mock_acados_solver.hpp
acados_solver_base/test/mock_acados_solver/generated_c_code/: acados_sim_solver_mock_acados_solver.c  acados_sim_solver_mock_acados_solver.h  acados_solver.pxd  acados_solver_mock_acados_solver.c  acados_solver_mock_acados_solver.h  legacy_CMakeLists.txt  main_mock_acados_solver.c  main_sim_mock_acados_solver.c
acados_solver_base/test/mock_acados_solver/generated_c_code/mock_acados_solver_constraints/: mock_acados_solver_constraints.h
acados_solver_base/test/mock_acados_solver/generated_c_code/mock_acados_solver_cost/: mock_acados_solver_cost.h  mock_acados_solver_cost_ext_cost_0_fun.c  mock_acados_solver_cost_ext_cost_0_fun_jac.c  mock_acados_solver_cost_ext_cost_0_fun_jac_hess.c  mock_acados_solver_cost_ext_cost_e_fun.c  mock_acados_solver_cost_ext_cost_e_fun_jac.c  mock_acados_solver_cost_ext_cost_e_fun_jac_hess.c  mock_acados_solver_cost_ext_cost_fun.c  mock_acados_solver_cost_ext_cost_fun_jac.c  mock_acados_solver_cost_ext_cost_fun_jac_hess.c
acados_solver_base/test/mock_acados_solver/generated_c_code/mock_acados_solver_model/: mock_acados_solver_impl_dae_fun.c  mock_acados_solver_impl_dae_fun_jac_x_xdot_u.c  mock_acados_solver_impl_dae_fun_jac_x_xdot_u_z.c  mock_acados_solver_impl_dae_fun_jac_x_xdot_z.c  mock_acados_solver_impl_dae_hess.c  mock_acados_solver_impl_dae_jac_x_xdot_u_z.c  mock_acados_solver_model.h
acados_solver_plugins/: CMakeLists.txt  CONTRIBUTING.md  package.xml
acados_solver_plugins/acados_solver_plugins/: __init__.py  acados_solver_plugins.py  solver_plugin_generator.py  solver_plugin_loader.py  utils.py
acados_solver_plugins/acados_solver_plugins/templates/: acados_solver_plugin.cpp.j2  acados_solver_plugin.hpp.j2  add_pluging_to_build.cmake.j2  export_plugin.xml.j2
acados_solver_plugins/cmake/: regenerate_if_flag_modified.cmake
acados_solver_plugins/demo/: demo.ipynb  demo_export_plugin.py  export_acados_ocp.py
acados_solver_plugins/env-hooks/: acados_solver_plugins.sh.in
acados_solver_plugins/include/acados_solver_plugins/: acados_solver_plugins.hpp  visibility_control.h
acados_solver_plugins_example/: CMakeLists.txt  README.md  package.xml
acados_solver_plugins_example/script/: demo_export_plugin_to_custom_pkg.py
acados_solver_plugins_example/src/: test_mock_plugin.cpp
acados_solver_ros2/: CMakeLists.txt  README.md  package.xml  requirements.txt
acados_solver_ros2/doxygen/: Doxyfile  mainpage.md
acados_solver_ros2/sphinx/: conf.py  index.rst
acados_solver_ros2/sphinx/developer_guide/: solver_plugins_python_API.rst
acados_solver_ros2/sphinx/example_application/: controller.rst  demo.rst  ocp_model.rst
acados_solver_ros2/sphinx/quickstart/: generate_new_solvers.rst  installation.rst  usage.rst  write_controllers.rst
acados_solvers/: CMakeLists.txt  CONTRIBUTING.md  package.xml
acados_solvers/include/acados_solvers/: acados_solver.hpp  visibility_control.h
acados_solvers/include/acados_solvers/helpers/: auto_generate_export_plugin.hpp  auto_generate_solver_def.hpp  auto_generate_solver_impl.hpp
acados_solvers/src/: acados_solver.cpp
acados_solvers/test/: test_solver.cpp  test_static_functions.cpp
acados_solvers/test/mock_acados_solver/: mock_acados_solver.cpp  mock_acados_solver.hpp
acados_solvers/test/mock_acados_solver/generated_c_code/: acados_sim_solver_mock_acados_solver.h  acados_solver.pxd  acados_solver_mock_acados_solver.h  main_mock_acados_solver.c  main_sim_mock_acados_solver.c
acados_solvers/test/mock_acados_solver/generated_c_code/mock_acados_solver_cost/: mock_acados_solver_cost.h  mock_acados_solver_cost_ext_cost_e_fun.c  mock_acados_solver_cost_ext_cost_e_fun_jac.c  mock_acados_solver_cost_ext_cost_e_fun_jac_hess.c  mock_acados_solver_cost_ext_cost_fun.c  mock_acados_solver_cost_ext_cost_fun_jac.c
acados_solvers/test/mock_acados_solver/generated_c_code/mock_acados_solver_model/: mock_acados_solver_impl_dae_fun_jac_x_xdot_u_z.c  mock_acados_solver_impl_dae_hess.c  mock_acados_solver_impl_dae_jac_x_xdot_u_z.c
acados_solvers_test/: CMakeLists.txt  package.xml
acados_solvers_test/src/: solver_test_node.cpp
api/: acados__solver_8hpp.html  acados__solver_8hpp__dep__incl.map  acados__solver_8hpp__dep__incl.md5  acados__solver_8hpp__incl.md5  acados__solver__exceptions_8hpp.html  acados__solver__exceptions_8hpp__incl.map  acados__solver__exceptions_8hpp__incl.md5  acados__solver__exceptions_8hpp_source.html  acados__solver__utils_8hpp.html  acados__solver__utils_8hpp__incl.map  acados__solver__utils_8hpp__incl.md5  acados__solver__utils_8hpp_source.html  acados__types_8hpp.html  acados__types_8hpp__dep__incl.map  acados__types_8hpp__dep__incl.md5  acados__types_8hpp__incl.map  acados__types_8hpp__incl.md5  acados__types_8hpp_source.html  annotated.html  classacados_1_1AcadosSolver.html  classes.html  files.html  (+36 more)
(+200 files in other folders)
