<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acados_solver_base</name>
  <version>0.1.1</version>
  <description>Base class for Acados solvers plugins (pluginlib). See "acados_solver_plugins" for available plugins and generating new ones.</description>
  <maintainer email="tpoignonec@unistra.fr">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>acados_vendor_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
