<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acados_solver_plugins_example</name>
  <version>0.0.0</version>
  <description> This is an example template package for acados solver plugins. </description>
  <maintainer email="tpoignonec@unistra.fr">tpoignonec</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>acados_solver_base</depend>
  <depend>pluginlib</depend>

  <exec_depend>acados_solver_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
