<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acados_solver_ros2</name>
  <version>0.2.0</version>
  <description>Meta-package aggregating the acados_solver_ros2 packages and documentation</description>
  <maintainer email="tpoignonec@unistra.fr">Thibault Poignonec</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python3-sphinx</build_depend>
  <build_depend>doxygen</build_depend>

  <exec_depend>acados_vendor_ros2</exec_depend>
  <exec_depend>acados_solver_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
